Начинаем вёрстку с препроцессором

--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -1,12 +1,50 @@
+
 .advantages {
   padding-top: 43px;
+  padding-bottom: 285px;
+  background-image: url("../img/iphone-screen-mobile@1x.png"), linear-gradient(174deg, #ffffff, #ffffff 24%, #f2f2f2 24%, #f2f2f2);
+  background-repeat: no-repeat;
+  background-position: 50% 106%;
+
   &__paragraf {
-    font-family: "Open Sans", Arial, sans-serif;
+    font-family: "Open Sans", "Arial", sans-serif;
+    font-weight: light;
     font-size: 24px;
     text-align: center;
     padding-left: 20px;
     padding-right: 20px;
     margin: 0;
     margin-bottom: 30px;
+    color: #283645;
+  }
+
+  &__list {
+    .reset_ul();
+    width: 280px;
+    margin: 0 auto;
+    margin-top: 118px;
+  }
+
+  &__item {
+    margin-bottom: 32px;
+  }
+
+  &__title {
+    font-family: "Open Sans", "Arial", sans-serif;
+    text-align: center;
+    font-weight: bold;
+    font-size: 18px;
+    margin-bottom: 15px;
+  }
+
+  &__description {
+    padding-left: 10px;
+    padding-right: 10px;
+    font-family: "Open Sans", "Arial", sans-serif;
+    text-align: center;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 24px;
+    color: #283645;
   }
 }
