--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,29 +1,9 @@
+
+@import "blocks/mixins.less";
+@import "blocks/variables.less";
+@import "blocks/scaffolding.less";
+@import "blocks/normalize.less";
 @import "blocks/page-header.less";
 @import "blocks/download.less";
 @import "blocks/advantages.less";
-
-@white: #ffffff;
-.reset_ul() {
-  padding: 0;
-  margin: 0;
-  list-style: none;
-}
-
-body {
-  min-width: 320px;
-  margin: 0;
-  padding: 0;
-  background-color: white;
-}
-
-.visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  clip: rect(0, 0, 0, 0);
-}
-
-.page-main {
-  width: 320px;
-  margin: 0 auto;
-}
+@import "blocks/form__personal.less";
