--- a/source/less/blocks/form__personal.less
+++ b/source/less/blocks/form__personal.less
@@ -1,14 +1,8 @@
-.form__histori {
-  font-family: "Open Sans", "Arial", sans-serif;
-  color: #283645;
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 30px;
-  text-align: center;
-}
-
 .user__list {
   box-sizing: border-box;
+  width: 320px;
+  margin: 0 auto;
+  margin-top: 13px;
 }
 
 .personal {
@@ -16,13 +10,12 @@
   border: none;
   margin: 0;
   padding: 0;
-
-  &__wrapper {
-    margin: 0;
-    margin-top: 14px;
-  }
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 21px;
 
   & label {
+    padding-left: 23px;
     font-family: "Open Sans", "Arial", sans-serif;
     color: #d22856;
     font-weight: normal;
@@ -33,8 +26,9 @@
 
   &__surname {
     margin: 0;
+    margin-top: 5px;
     width: 256px;
-    height: 59px;
+    height: 57px;
     padding-left: 20px;
     color: #283645;
     font-weight: normal;
@@ -45,8 +39,9 @@
 
   &__name {
     margin: 0;
+    margin-top: 2px;
     width: 256px;
-    height: 59px;
+    height: 57px;
     padding-left: 20px;
     color: #283645;
     font-weight: normal;
@@ -57,8 +52,9 @@
 
   &__middle-name {
     margin: 0;
+    margin-top: 2px;
     width: 256px;
-    height: 59px;
+    height: 57px;
     padding-left: 20px;
     color: #283645;
     font-weight: normal;
@@ -66,37 +62,4 @@
     font-size: 18px;
     line-height: 30px;
   }
-}
-
-.progress {
-  border: none;
-  margin: 0;
-  padding: 0;
-
-  &__title {
-    font-family: "Open Sans", "Arial", sans-serif;
-    color: #d22856;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 18px;
-    text-transform: uppercase;
-  }
-}
-
-.user-contact {
-  border: none;
-  margin: 0;
-  padding: 0;
-}
-
-.app {
-  border: none;
-  margin: 0;
-  padding: 0;
-}
-
-.post {
-  border: none;
-  margin: 0;
-  padding: 0;
 }
