--- a/source/less/blocks/scaffolding.less
+++ b/source/less/blocks/scaffolding.less
@@ -39,9 +39,7 @@ body {
   clip: rect(0, 0, 0, 0);
 }
 
-.page-main,
-.main-photo,
-.main-form {
+.page-main {
   width: 320px;
   margin: 0 auto;
 }
