--- a/source/less/style.less
+++ b/source/less/style.less
@@ -6,4 +6,9 @@
 @import "blocks/page-header.less";
 @import "blocks/download.less";
 @import "blocks/advantages.less";
+@import "blocks/main-form.less";
 @import "blocks/form__personal.less";
+@import "blocks/progress.less";
+@import "blocks/user-contact.less";
+@import "blocks/app.less";
+@import "blocks/post.less";
