--- a/source/less/blocks/form__personal.less
+++ b/source/less/blocks/form__personal.less
@@ -24,7 +24,7 @@
     text-transform: uppercase;
   }
 
-  &__surname {
+  &__input {
     margin: 0;
     margin-top: 5px;
     width: 256px;
@@ -37,29 +37,4 @@
     line-height: 30px;
   }
 
-  &__name {
-    margin: 0;
-    margin-top: 2px;
-    width: 256px;
-    height: 57px;
-    padding-left: 20px;
-    color: #283645;
-    font-weight: normal;
-    font-family: "Open Sans", "Arial", sans-serif;
-    font-size: 18px;
-    line-height: 30px;
-  }
-
-  &__middle-name {
-    margin: 0;
-    margin-top: 2px;
-    width: 256px;
-    height: 57px;
-    padding-left: 20px;
-    color: #283645;
-    font-weight: normal;
-    font-family: "Open Sans", "Arial", sans-serif;
-    font-size: 18px;
-    line-height: 30px;
-  }
 }
