--- a/source/less/blocks/progress.less
+++ b/source/less/blocks/progress.less
@@ -1,8 +1,11 @@
-.progress {
+.form__progress {
   border: none;
   margin: 0;
   padding: 0;
   background-color: #f2f2f2;
+}
+
+.progress {
 
   &__title {
     display: block;
@@ -50,20 +53,22 @@
       border: 2px solid #d22856;
     }
   }
-
-  &__btn {
-    display: none;
-  }
 }
 
-.progress .btn-1:checked ~ .progress .progress__mark[for="selfie-shark"]::after {
+.progress__btn:checked+.progress__mark[for="selfie-shark"]::after,
+.progress__btn:checked+.progress__mark[for="burn-beach"]::after,
+.progress__btn:checked+.progress__mark[for="see-chack"]::after,
+.progress__btn:checked+.progress__mark[for="souvenir"]::after,
+.progress__btn:checked+.progress__mark[for="tower"]::after,
+.progress__btn:checked+.progress__mark[for="smash"]::after {
   content: "";
   position: absolute;
-  top: -7px;
-  left: -69px;
-  width: 35px;
-  height: 35px;
-  background-image: url("../img/icon-yes.svg");
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
+  top: 0px;
+  left: -62px;
+  width: 20px;
+  height: 8px;
+  border: 2px solid #d22856;
+  border-top-color: transparent;
+  border-right-color: transparent;
+  transform: rotate(-45deg);
 }
