--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -6,13 +6,13 @@
 
   &__paragraf {
     font-family: "Open Sans", "Arial", sans-serif;
-    font-weight: light;
+    font-weight: 300;
     font-size: 24px;
     text-align: center;
     padding-left: 20px;
     padding-right: 20px;
     margin: 0;
-    margin-bottom: 30px;
+    margin-bottom: 31px;
     color: #283645;
   }
 
