Начинаем вёрстку с препроцессором

--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -19,7 +19,7 @@
 
 @media (min-width: 960px) {
   .page-header {
-    width: 960px;
+    width: 100%;
     display: flex;
     justify-content: space-between;
   }
@@ -37,16 +37,17 @@
   border-bottom: 1px solid #000000;
 }
 
-@media (min-width: 960px) {
+@media (min-width: 660px) {
   .page-header__logo {
-    min-height: 110px;
+    min-width: 660px;
+    max-width: 900px;
+    min-height: 85px;
   }
 }
 
 @media (min-width: 960px) {
   .page-header__logo {
     width: 160px;
-    min-height: 110px;
   }
 }
 
