--- a/source/less/blocks/scaffolding.less
+++ b/source/less/blocks/scaffolding.less
@@ -24,12 +24,24 @@
 
 
 body {
-  min-width: 320px;
-  margin: 0;
+  width: 320px;
+  margin: 0 auto;
   padding: 0;
   font-family: "Open Sans", "Arial", sans-serif;
   background-color: #ffffff;
   color: #000000;
+}
+
+@media (min-width: 660px) {
+  body {
+    width: 660px;
+  }
+}
+
+@media (min-width: 960px) {
+  body {
+    width: 960px;
+  }
 }
 
 .visually-hidden {
