--- a/source/less/blocks/download.less
+++ b/source/less/blocks/download.less
@@ -1,19 +1,8 @@
 
 .download {
+  margin: 0 auto;
   background-color: #1d2631;
   margin-top: -70px;
-
-  @media (min-width: 660px) {
-    .download {
-      width: 100%;
-      padding-left: 20px;
-      padding-right: 20px;
-      background-color: #ffffff;
-    //  background-image: url("../img/bg-back-tablet@1x.jpg");
-    //  background-repeat: no-repeat;
-    //  background-position: 50% 50%;
-    }
-  }
 
   &__access {
     background-color: #1d2631;
@@ -28,6 +17,39 @@
     padding-left: 20px;
     padding-right: 20px;
     text-align: center;
+  }
+}
+
+@media (min-width: 660px) {
+  .download {
+    width: 100%;
+    min-height: 727px;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-top: -108px;
+    background-image: url("../img/iphone-hand-tablet@1x.png"), url("../img/bg-back-tablet@1x.jpg");
+    background-repeat: no-repeat;
+    background-position: -20px 100%, 55% 50%;
+
+    &__access {
+      background-color: transparent;
+      font-size: 18px;
+      font-weight: normal;
+      margin-top: 32px;
+      padding: 0;
+      width: 308px;
+    }
+  }
+}
+
+@media (min-width: 960px) {
+  .download {
+    width: 100%;
+    padding-left: 20px;
+    padding-right: 20px;
+    background-image: url("../img/bg-back-desktop@1x.jpg");
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
   }
 }
 
@@ -52,6 +74,13 @@
 @media (min-width: 660px) {
   .download__paragraf {
     background-image: none;
+    margin-top: 0px;
+    margin-left: 25px;
+    padding-top: 202px;
+    min-height: 0px;
+    width: 205px;
+    font-size: 40px;
+    line-height: 47px;
   }
 }
 
@@ -84,6 +113,15 @@
   }
 }
 
+@media (min-width: 660px) {
+  .button {
+    margin-top: 32px;
+    margin-left: 0;
+    width: 300px;
+    margin-bottom: 47px;
+  }
+}
+
 .icon-list {
   .reset_ul();
   background-color: #1d2631;
@@ -99,6 +137,13 @@
     &:nth-child(3n) {
       margin-right: 0px;
     }
+  }
+}
+
+@media (min-width: 660px) {
+  .icon-list {
+    background-color: transparent;
+    margin-left: 48px;
   }
 }
 
