--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -33,7 +33,7 @@
     &::before {
       content: "";
       position: absolute;
-      top: 124px;
+      bottom: -320px;
       left: 62px;
       width: 157px;
       height: 300px;
