--- a/source/less/blocks/download.less
+++ b/source/less/blocks/download.less
@@ -1,3 +1,16 @@
+@media (min-width: 660px) {
+  .download-container {
+    width: 660px;
+    margin: 0 auto;
+  }
+}
+
+@media (min-width: 960px) {
+  .download-container {
+    width: 960px;
+    margin: 0 auto;
+  }
+}
 
 .download {
   margin: 0 auto;
@@ -22,7 +35,7 @@
 
 @media (min-width: 660px) {
   .download {
-    width: 100%;
+    width: 660px;
     min-height: 727px;
     padding-left: 20px;
     padding-right: 20px;
