--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -2,7 +2,6 @@
 
 .page-header {
   position: relative;
-  width: 320px;
   margin: 0 auto;
   background-color: rgba(0, 0, 0, 0.3);
   color: #ffffff;
@@ -11,15 +10,21 @@
   font-family: "Open Sans", "Arial", sans-serif;
 }
 
+.page-header__wrapper {
+  width: 320px;
+}
+
 @media (min-width: 660px) {
-  .page-header {
+  .page-header__wrapper {
     width: 660px;
+    margin: 0 auto;
   }
 }
 
 @media (min-width: 960px) {
-  .page-header {
-    width: 100%;
+  .page-header__wrapper {
+    width: 960px;
+    margin: 0 auto;
     display: flex;
     justify-content: space-between;
   }
@@ -195,11 +200,11 @@
   }
 }
 
-.site-list__item:hover a {
+.site-list__item:hover a[href] {
   color: #d22856;
 }
 
-.site-list__item:active a {
+.site-list__item:active a[href] {
   color: #000000;
   opacity: 0.3;
 }
