--- a/source/less/blocks/app.less
+++ b/source/less/blocks/app.less
@@ -1,5 +1,76 @@
-.app {
+.form__app__wrapper {
+  margin-top: 25px;
+  padding-top: 37px;
+  padding-bottom: 2px;
+  background-color: #f2f2f2;
+}
+
+.form__app {
   border: none;
   margin: 0;
   padding: 0;
+
+  & legend {
+    display: block;
+    width: 189px;
+    font-family: "Open Sans", "Arial", sans-serif;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 14px;
+    line-height: 18px;
+    font-weight: normal;
+    color: #d22856;
+  }
+}
+
+.app__wrapper {
+  margin-top: 40px;
+  margin-bottom: 45px;
+}
+
+.app__mark {
+  position: relative;
+  font-family: "Open Sans", "Arial", sans-serif;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 30px;
+  color: #283645;
+  margin-top: 20px;
+  padding-top: 20px;
+  padding-left: 90px;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 13px;
+    left: 20px;
+    width: 35px;
+    height: 35px;
+    border: 2px solid #e5e5e5;
+    border-radius: 50%;
+    background-color: #ffffff;
+    cursor: pointer;
+  }
+
+  &:hover::before,
+  &:focus::before {
+    border-color: #283645;
+  }
+
+  &:active::before {
+    border-color: #d22856;
+  }
+}
+
+.app__btn:checked + .app__mark[for="app-ios"]::after,
+.app__btn:checked + .app__mark[for="app-android"]::after,
+.app__btn:checked + .app__mark[for="app-windows"]::after {
+  content: "";
+  position: absolute;
+  top: 25px;
+  left: 32px;
+  width: 15px;
+  height: 15px;
+  background-color: #d22856;
+  border-radius: 50%;
 }
