--- a/source/less/blocks/download.less
+++ b/source/less/blocks/download.less
@@ -1,19 +1,18 @@
 @media (min-width: 660px) {
-  .download-container {
+  .container {
     width: 660px;
     margin: 0 auto;
+    box-sizing: border-box;
   }
 }
 
 @media (min-width: 960px) {
-  .download-container {
+  .container {
     width: 960px;
-    margin: 0 auto;
   }
 }
 
 .download {
-  margin: 0 auto;
   background-color: #1d2631;
   margin-top: -70px;
 
@@ -37,8 +36,6 @@
   .download {
     width: 660px;
     min-height: 727px;
-    padding-left: 20px;
-    padding-right: 20px;
     margin-top: -108px;
     background-image: url("../img/iphone-hand-tablet@1x.png"), url("../img/bg-back-tablet@1x.jpg");
     background-repeat: no-repeat;
@@ -51,6 +48,7 @@
       margin-top: 32px;
       padding: 0;
       width: 308px;
+      margin-left: 23px;
     }
   }
 }
@@ -58,8 +56,6 @@
 @media (min-width: 960px) {
   .download {
     width: 100%;
-    padding-left: 20px;
-    padding-right: 20px;
     background-image: url("../img/bg-back-desktop@1x.jpg");
     background-repeat: no-repeat;
     background-position: 50% 50%;
@@ -87,10 +83,10 @@
 @media (min-width: 660px) {
   .download__paragraf {
     background-image: none;
-    margin-top: 0px;
-    margin-left: 25px;
+    margin-top: 0;
+    margin-left: 47px;
     padding-top: 202px;
-    min-height: 0px;
+    min-height: 0;
     width: 205px;
     font-size: 40px;
     line-height: 47px;
@@ -129,7 +125,7 @@
 @media (min-width: 660px) {
   .button {
     margin-top: 32px;
-    margin-left: 0;
+    margin-left: 20px;
     width: 300px;
     margin-bottom: 47px;
   }
@@ -148,7 +144,7 @@
     margin-right: 32px;
 
     &:nth-child(3n) {
-      margin-right: 0px;
+      margin-right: 0;
     }
   }
 }
@@ -156,7 +152,7 @@
 @media (min-width: 660px) {
   .icon-list {
     background-color: transparent;
-    margin-left: 48px;
+    margin-left: 68px;
   }
 }
 
