--- a/source/less/blocks/form__personal.less
+++ b/source/less/blocks/form__personal.less
@@ -5,7 +5,7 @@
   margin-top: 13px;
 }
 
-.personal {
+.form__personal {
   box-sizing: border-box;
   border: none;
   margin: 0;
@@ -23,18 +23,29 @@
     line-height: 30px;
     text-transform: uppercase;
   }
+}
 
+.personal {
   &__input {
     margin: 0;
     margin-top: 5px;
     width: 256px;
-    height: 57px;
+    height: 56px;
     padding-left: 20px;
     color: #283645;
     font-weight: normal;
     font-family: "Open Sans", "Arial", sans-serif;
     font-size: 18px;
     line-height: 30px;
-  }
+    border: 2px solid #e5e5e5;
 
+    &:hover,
+    &:focus {
+      border-color: #283645;
+    }
+
+    &:active {
+      border-color: #d22856;
+    }
+  }
 }
