--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -44,15 +44,14 @@
 
 @media (min-width: 660px) {
   .page-header__logo {
-    min-width: 660px;
-    max-width: 900px;
     min-height: 85px;
   }
 }
 
 @media (min-width: 960px) {
   .page-header__logo {
-    width: 160px;
+    min-width: 150px;
+    max-width: 160px;
   }
 }
 
@@ -64,8 +63,17 @@
 }
 
 @media (min-width: 660px) {
-  widht: 147px;
-  height: 40px;
+  .page-header__logo-image {
+    widht: 147px;
+    height: 40px;
+  }
+}
+
+@media (min-width: 960px) {
+  .page-header__logo-image {
+    widht: 200px;
+    height: 40px;
+  }
 }
 
 .main-nav__toggle {
@@ -171,7 +179,7 @@
 
 @media (min-width: 960px) {
   .site-list__item {
-    margin-right: 80px;
+    margin-right: 81px;
   }
 }
 
@@ -211,6 +219,12 @@
 
 .main-nav--closed .main-nav__wrapper {
   display: none;
+}
+
+@media (min-width: 960px) {
+  .main-nav--closed .main-nav__wrapper {
+    display: block;
+  }
 }
 
 .main-nav--opened .main-nav__wrapper {
