--- a/source/less/blocks/user-contact.less
+++ b/source/less/blocks/user-contact.less
@@ -1,5 +1,48 @@
-.user-contact {
+.form__user-contact {
   border: none;
   margin: 0;
+  margin-top: 27px;
   padding: 0;
+  padding-left: 20px;
+  padding-right: 20px;
+
+  & label {
+    padding-left: 23px;
+    font-family: "Open Sans", "Arial", sans-serif;
+    color: #d22856;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 30px;
+    text-transform: uppercase;
+  }
+}
+
+.user-contact {
+  &__wrapper {
+    margin-top: 5px;
+    margin-bottom: 17px;
+  }
+
+  &__input {
+    margin: 0;
+    margin-top: 5px;
+    width: 256px;
+    height: 57px;
+    padding-left: 20px;
+    color: #283645;
+    font-weight: normal;
+    font-family: "Open Sans", "Arial", sans-serif;
+    font-size: 18px;
+    line-height: 30px;
+    border: 2px solid #e5e5e5;
+
+    &:hover,
+    &:focus {
+      border-color: #283645;
+    }
+
+    &:active {
+      border-color: #d22856;
+    }
+  }
 }
