--- a/source/less/blocks/app.less
+++ b/source/less/blocks/app.less
@@ -74,3 +74,29 @@
   background-color: #d22856;
   border-radius: 50%;
 }
+
+@media (min-width: 660px) {
+  .form__app__wrapper {
+    order: 2;
+    width: 620px;
+    margin: 0;
+    padding: 0;
+    padding-left: 20px;
+    background-color: #ffffff;
+  }
+
+  .form__app {
+    border: 2px solid #e5e5e5;
+    padding-top: 8px;
+    padding-left: 39px;
+    padding-bottom: 14px;
+
+    & legend {
+      width: 368px;
+    }
+  }
+
+  .app__mark {
+    padding-left: 80px;
+  }
+}
