--- a/source/less/blocks/form__personal.less
+++ b/source/less/blocks/form__personal.less
@@ -49,3 +49,37 @@
     }
   }
 }
+
+@media (min-width: 660px) {
+  .user__list {
+    width: 660px;
+    margin-top: 46px;
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .form__personal {
+    flex-grow: 1;
+    order: 1;
+    padding-bottom: 13px;
+
+    & label {
+      padding-left: 0;
+      padding-right: 17px;
+    }
+  }
+
+  .personal {
+    &__wrapper {
+      display: flex;
+      margin-bottom: 49px;
+      max-height: 65px;
+      align-items: center;
+    }
+
+    &__input {
+      width: 100%;
+      height: 57px;
+    }
+  }
+}
