--- a/source/less/blocks/post.less
+++ b/source/less/blocks/post.less
@@ -1,34 +1,46 @@
-
-.post__title {
+.post {
+  border: none;
+  margin: 0;
   margin-top: 32px;
-  margin-bottom: 10px;
-  width: 320px;
-  font-family: "Open Sans", "Arial", sans-serif;
-  text-transform: uppercase;
-  font-size: 14px;
-  line-height: 30px;
-  font-weight: normal;
-  color: #d22856;
-  text-align: center;
-}
+  padding: 0;
 
-.post__textarea {
-  margin-left: 20px;
-  padding-top: 15px;
-  padding-left: 18px;
-  border: 2px solid #e5e5e5;
-  font-family: "Open Sans", "Arial", sans-serif;
-  font-size: 18px;
-  line-height: 30px;
-  font-weight: normal;
-  color: #283645;
-
-  &:hover,
-  &:focus {
-    border-color: #283645;
+  .post__title {
+    margin-top: 32px;
+    margin-bottom: 10px;
+    width: 320px;
+    font-family: "Open Sans", "Arial", sans-serif;
+    text-transform: uppercase;
+    font-size: 14px;
+    line-height: 30px;
+    font-weight: normal;
+    color: #d22856;
+    text-align: center;
   }
 
-  &:active {
-    border-color: #d22856;
+  .post__textarea {
+    margin-left: 20px;
+    padding-top: 15px;
+    padding-left: 18px;
+    border: 2px solid #e5e5e5;
+    font-family: "Open Sans", "Arial", sans-serif;
+    font-size: 18px;
+    line-height: 30px;
+    font-weight: normal;
+    color: #283645;
+
+    &:hover,
+    &:focus {
+      border-color: #283645;
+    }
+
+    &:active {
+      border-color: #d22856;
+    }
+  }
+}
+
+@media (min-width: 660px) {
+  .post {
+    order: 5;
   }
 }
