--- a/source/less/blocks/progress.less
+++ b/source/less/blocks/progress.less
@@ -1,16 +1,20 @@
+.form__progress__wrapper {
+  padding-top: 10px;
+  background-color: #f2f2f2;
+}
+
 .form__progress {
   border: none;
   margin: 0;
   padding: 0;
-  background-color: #f2f2f2;
 }
 
 .progress {
   &__title {
     display: block;
     margin: 0;
-    margin-bottom: 42px;
-    padding-top: 40px;
+    margin-bottom: 23px;
+    padding-top: 28px;
     font-family: "Open Sans", "Arial", sans-serif;
     color: #d22856;
     font-weight: normal;
@@ -75,4 +79,29 @@
   border-top-color: transparent;
   border-right-color: transparent;
   transform: rotate(-45deg);
+}
+
+@media (min-width: 660px) {
+  .form__progress__wrapper {
+    order: 4;
+    margin-top: 48px;
+    padding-left: 20px;
+    background-color: #ffffff;
+  }
+
+  .form__progress {
+    border: 2px solid #e5e5e5;
+    width: 620px;
+  }
+
+  .progress {
+    &__title {
+      padding-top: 0;
+      width: 432px;
+
+      & br {
+        display: none;
+      }
+    }
+  }
 }
