--- a/source/less/blocks/user-contact.less
+++ b/source/less/blocks/user-contact.less
@@ -18,6 +18,10 @@
 }
 
 .user-contact {
+  &__title {
+    display: none;
+  }
+
   &__wrapper {
     margin-top: 5px;
     margin-bottom: 17px;
@@ -43,6 +47,51 @@
 
     &:active {
       border-color: #d22856;
+    }
+  }
+}
+
+@media (min-width: 660px) {
+  .form__user-contact {
+    order: 3;
+    min-width: 537px;
+    border: 2px solid #e6e6e6;
+    display: flex;
+    margin-top: 50px;
+    margin-left: 20px;
+    margin-right: 20px;
+    flex-grow: 1;
+    padding-top: 22px;
+    padding-left: 59px;
+
+    & label {
+      padding-left: 19px;
+      padding-top: 10px;
+    }
+  }
+
+    .user-contact {
+    &__title {
+      display: block;
+      width: 260px;
+      text-align: center;
+      font-family: "Open Sans", "Arial", sans-serif;
+      text-transform: uppercase;
+      font-weight: normal;
+      font-size: 14px;
+      line-height: 30px;
+      color: #d22856;
+    }
+
+    &__wrapper {
+      display: flex;
+      flex-direction: column-reverse;
+      margin-bottom: 25px;
+    }
+
+    &__input {
+      width: 476px;
+      padding-left: 18px;
     }
   }
 }
