--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,16 +1,16 @@
 
 
 .page-header {
-  position: relative;
-  margin: 0 auto;
+  margin: 0;
   background-color: rgba(0, 0, 0, 0.3);
   color: #ffffff;
-  font-size: 18px;
+  font-size: 14px;
   line-height: 32px;
   font-family: "Open Sans", "Arial", sans-serif;
 }
 
 .page-header__wrapper {
+  position: relative;
   width: 320px;
 }
 
