--- a/source/less/blocks/scaffolding.less
+++ b/source/less/blocks/scaffolding.less
@@ -24,24 +24,13 @@
 
 
 body {
-  width: 320px;
-  margin: 0 auto;
+  min-width: 320px;
+  margin: 0;
   padding: 0;
   font-family: "Open Sans", "Arial", sans-serif;
   background-color: #ffffff;
   color: #000000;
-}
-
-@media (min-width: 660px) {
-  body {
-    width: 660px;
-  }
-}
-
-@media (min-width: 960px) {
-  body {
-    width: 960px;
-  }
+  font-weight: 300;
 }
 
 .visually-hidden {
@@ -49,23 +38,6 @@ body {
   width: 1px;
   height: 1px;
   clip: rect(0, 0, 0, 0);
-}
-
-.page-main {
-  width: 320px;
-  margin: 0 auto;
-}
-
-@media (min-width: 660px) {
-  .page-main {
-    width: 660px;
-  }
-}
-
-@media (min-width: 960px) {
-  .page-main {
-    width: 960px;
-  }
 }
 
 .form__wrapper {
