Добавляет фон в меню

--- a/source/less/blocks/download.less
+++ b/source/less/blocks/download.less
@@ -2,6 +2,7 @@
   box-sizing: border-box;
   width: 320px;
   margin: 0 auto;
+  padding: 0 20px;
 }
 
 @media (min-width: 660px) {
@@ -13,6 +14,7 @@
 @media (min-width: 960px) {
   .container {
     width: 960px;
+    padding: 0 10px;
   }
 }
 
@@ -22,6 +24,7 @@
   background-image: url("../img/iphone-hand-mobile@1x.png"), url("../img/bg-back-mobile@1x.jpg");
   background-repeat: no-repeat, no-repeat;
   background-position: 42% 40%, 50% 1%;
+  background-size: 260px 292px, 100% 460px;
 
   &__access {
     background-color: #1d2631;
