--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -2,8 +2,12 @@
 .advantages {
   padding-top: 43px;
   padding-bottom: 285px;
-  background-image: linear-gradient(174deg, #ffffff, #ffffff 24%, #f2f2f2 24%, #f2f2f2);
+  background-color: #ffffff;
 
+  &__wrapper {
+    padding-bottom: 288px;
+    background-image: linear-gradient(174deg, #ffffff, #ffffff 21%, #f2f2f2 21%, #f2f2f2);
+  }
   &__paragraf {
     font-family: "Open Sans", "Arial", sans-serif;
     font-weight: 300;
@@ -81,6 +85,11 @@
     &__paragraf {
       font-size: 40px;
       margin-bottom: 2px;
+      padding-left: 0;
+
+      &:nth-of-type(1) {
+        width: 620px;
+      }
     }
 
     &__list {
