--- a/source/less/blocks/download.less
+++ b/source/less/blocks/download.less
@@ -23,7 +23,7 @@
   margin-top: -70px;
   background-image: url("../img/iphone-hand-mobile@1x.png"), url("../img/bg-back-mobile@1x.jpg");
   background-repeat: no-repeat, no-repeat;
-  background-position: 42% 40%, 50% 1%;
+  background-position: 42% 38.4%, 50% 1%;
   background-size: 260px 292px, 100% 460px;
 
   &__access {
@@ -33,7 +33,6 @@
     padding-bottom: 30px;
     font-family: "Open Sans", "Arial", sans-serif;
     font-size: 14px;
-    font-weight: 300;
     line-height: 24px;
     color: #ffffff;
     padding-left: 20px;
@@ -47,8 +46,9 @@
     min-height: 727px;
     margin-top: -108px;
     background-image: url("../img/iphone-hand-tablet@1x.png"), url("../img/bg-back-tablet@1x.jpg");
-    background-repeat: no-repeat;
-    background-position: -20px 100%, 55% 50%;
+    background-repeat: no-repeat, no-repeat;
+    background-position: -35px 99.8%, 52% 0%;
+    background-size: 700px auto, 1200px 729px;
 
     &__access {
       background-color: transparent;
@@ -57,7 +57,7 @@
       margin-top: 32px;
       padding: 0;
       width: 308px;
-      margin-left: 23px;
+      margin-left: -13px;
     }
   }
 }
@@ -65,9 +65,15 @@
 @media (min-width: 960px) {
   .download {
     width: 100%;
-    background-image: url("../img/bg-back-desktop@1x.jpg");
-    background-repeat: no-repeat;
-    background-position: 50% 50%;
+    min-height: 849px;
+    background-image:url("../img/iphone-hand-tablet@1x.png"), url("../img/bg-back-desktop@1x.jpg");
+    background-repeat: no-repeat, no-repeat;
+    background-position: 100% 100%, 50.1% 2%;
+    background-size: 830px auto, 2560px auto;
+
+    &__access {
+      padding-left: 5px;
+    }
   }
 }
 
@@ -88,12 +94,24 @@
   .download__paragraf {
     background-image: none;
     margin-top: 0;
-    margin-left: 47px;
+    margin-bottom: 35px;
+    padding-left: 30px;
     padding-top: 202px;
     min-height: 0;
     width: 205px;
     font-size: 40px;
     line-height: 47px;
+  }
+}
+
+@media (min-width: 960px) {
+  .download__paragraf {
+    width: 240px;
+    font-size: 50px;
+    line-height: 58px;
+    padding-left: 21px;
+    padding-top: 219px;
+    margin-bottom: 54px;
   }
 }
 
@@ -108,7 +126,7 @@
   text-decoration: none;
   font-family: "Open Sans", "Arial", sans-serif;
   font-size: 18px;
-  font-weight: 600;
+  font-weight: bold;
   text-align: center;
   vertical-align: middle;
   color: #ffffff;
@@ -129,9 +147,17 @@
 @media (min-width: 660px) {
   .button {
     margin-top: 32px;
-    margin-left: 20px;
+    margin-left: -14px;
     width: 300px;
     margin-bottom: 47px;
+  }
+}
+
+@media (min-width: 960px) {
+  .button {
+    font-size: 21px;
+    margin-left: -10px;
+    margin-bottom: 67px;
   }
 }
 
@@ -142,7 +168,7 @@
   flex-wrap: wrap;
   width: 232px;
   margin: 0 auto;
-  margin-left: 56px;
+  margin-left: 38px;
 
   &__item {
     margin-right: 32px;
@@ -156,7 +182,14 @@
 @media (min-width: 660px) {
   .icon-list {
     background-color: transparent;
-    margin-left: 68px;
+    margin-left: 33px;
+  }
+}
+
+@media (min-width: 960px) {
+  .icon-list {
+    margin-left: 38px;
+    margin-bottom: 52px;
   }
 }
 
