--- a/source/less/blocks/download.less
+++ b/source/less/blocks/download.less
@@ -65,8 +65,9 @@
 @media (min-width: 960px) {
   .download {
     width: 100%;
+    margin-bottom: 28px;
     min-height: 849px;
-    background-image:url("../img/iphone-hand-tablet@1x.png"), url("../img/bg-back-desktop@1x.jpg");
+    background-image: url("../img/iphone-hand-tablet@1x.png"), url("../img/bg-back-desktop@1x.jpg");
     background-repeat: no-repeat, no-repeat;
     background-position: 100% 100%, 50.1% 2%;
     background-size: 830px auto, 2560px auto;
