--- a/source/less/blocks/timer.less
+++ b/source/less/blocks/timer.less
@@ -50,6 +50,10 @@
       font-size: 14px;
       line-height: 24px;
       color: #283645;
+
+      &__desctop {
+        display: none;
+      }
     }
 
     &__know {
@@ -60,6 +64,74 @@
       font-size: 14px;
       line-height: 24px;
       color: #d22856;
+    }
+  }
+}
+
+@media (min-width: 960px) {
+  .timer {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    padding-left: 367px;
+    padding-top: 130px;
+    background-color: #f2f2f2;
+
+    &::before {
+      content: "";
+      position: absolute;
+      top: 38px;
+      left: 1px;
+      width: 300px;
+      height: 348px;
+      background-image: url("../img/icon-editor-diagram-fill.svg"), url("../img/icon-timer.svg");
+      background-repeat: no-repeat;
+      background-size: 253px 253px, 298px 346px;
+      background-position: 50% 74%, 50% 50%;
+    }
+
+    &::after {
+      content: "24";
+      position: absolute;
+      color: #d22856;
+      font-size: 120px;
+      font-weight: bold;
+      padding-top: 196px;
+      padding-left: 61px;
+      top: -37px;
+      left: 20px;
+    }
+
+    &__wrapper {
+      width: 530px;
+    }
+
+    &__title {
+      margin: 0;
+      margin-bottom: 23px;
+
+      & br {
+        display: none;
+      }
+    }
+
+    &__paragraf {
+      font-size: 18px;
+      line-height: 29px;
+      margin-bottom: 35px;
+
+      &__tablet {
+        display: none;
+      }
+
+      &__desctop {
+        display: block;
+      }
+    }
+
+    &__know {
+      font-size: 18px;
+      padding-bottom: 116px;
     }
   }
 }
